2010-04-15  Roland Steiner  <rolandsteiner@chromium.org>
 
        Reviewed by Dimitri Glazkov.

        Bug 37636 - [DRT/Chromium] Implement DRT/Chromium for Windows
        https://bugs.webkit.org/show_bug.cgi?id=37636
 
        Second patch: add Windows-specific implementation parts
        of TestShell.

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * DumpRenderTree/chromium/TestShell.h:
        (TestShell::finishedEvent):
        * DumpRenderTree/chromium/TestShellWin.cpp:
        (watchDogThread):
        (TestShell::waitTestFinished):

2010-04-15  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Dimitri Glazkov.

        Bug 37636 - [DRT/Chromium] Implement DRT/Chromium for Windows
        https://bugs.webkit.org/show_bug.cgi?id=37636

        First patch: fix compiler errors.

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::reset):
        (EventSender::dispatchMessage):
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::pathToLocalResource):
        * DumpRenderTree/chromium/TestWebWorker.h:
        * DumpRenderTree/chromium/TextInputController.cpp:
        * DumpRenderTree/chromium/WebViewHost.h:
        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:

2010-04-14  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Simon Hausmann.

        [Qt] Moving setViewMode from DumpRenderTreeSupportQt to qwebpage.cpp
        https://bugs.webkit.org/show_bug.cgi?id=37622

        Method qt_wrt_setViewMode was removed from qwebpage.cpp by mistake in r57433
        (bug 35844). Moving it back.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setViewModeMediaFeature):

2010-04-15  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Adam Barth.

        Add some very minimal unit tests for new-run-webkit-tests. This should
        be enough to catch egregious brokenness like syntax errors and import